--- a/templates/graph.html
+++ b/templates/graph.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <link rel="stylesheet" href="http://cdn.pydata.org/bokeh/release/bokeh-0.11.1.min.css" type="text/css" />
-    <script type="text/javascript" src="http://cdn.pydata.org/bokeh/release/bokeh-0.11.1.min.js">
+    <link rel="stylesheet" href="//cdn.pydata.org/bokeh/release/bokeh-0.11.1.min.css" type="text/css" />
+    <script type="text/javascript" src="//cdn.pydata.org/bokeh/release/bokeh-0.11.1.min.js">
     </script>
     {{ script | safe }}
   </head>
